debug_report_(date +%Y%m%d_%H%M%S).txt
@pattern_meta@
GLIMMER Pattern:
{
  "metadata": {
    "timestamp": "2025-06-19 08:09:47",
    "author": "isdood",
    "pattern_version": "1.0.0",
    "color": "#FF69B4"
  },
  "file_info": {
    "path": "./debug_report_(date +%Y%m%d_%H%M%S).txt",
    "type": "txt",
    "hash": "2c9b4a4e57bf615b22f072216b9fe3df7e4b3345"
  }
}
@pattern_meta@

MAYA Debug Report
==================
Timestamp: Thu 19 Jun 2025 08:09:46 AM EDT UTC

Build Error Output:
/home/shimmer/MAYA/build.zig:108:14: error: no field or member function named 'setEntryPoint' in 'Build.Step.Compile'
    maya_wasm.setEntryPoint(null);
    ~~~~~~~~~^~~~~~~~~~~~~~
/usr/lib/zig/std/Build/Step/Compile.zig:1:1: note: struct declared here
const builtin = @import("builtin");
^~~~~
/home/shimmer/MAYA/build.zig:108:14: note: method invocation only supports up to one level of implicit pointer dereferencing
/home/shimmer/MAYA/build.zig:108:14: note: use '.*' to dereference pointer
referenced by:
    runBuild__anon_24782: /usr/lib/zig/std/Build.zig:2427:33
    main: /usr/lib/zig/compiler/build_runner.zig:339:29
    5 reference(s) hidden; use '-freference-trace=7' to see all references
